# aoc_utils

./: .gitignore  LICENSE  README.md  aocnew.sh
aocex/: Cargo.toml  README.md
aocex/src/: lib.rs  main.rs
aocfetch/: Cargo.toml  README.md
aocfetch/src/: lib.rs  main.rs  request.rs  session.rs
aocsub/: Cargo.toml  README.md
aocsub/src/: lib.rs  main.rs  request.rs
scaffold/: lib.rs  main.rs
