[package]
name = "aocex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
thiserror = "1.0.50"
xml-rs = "0.8.19"
