[package]
name = "aocfetch"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
rust-ini = "0.20.0"
thiserror = "1.0.50"
