[package]
name = "aocsub"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aocfetch = { version = "0.2.0", path = "../aocfetch" }
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
dirs = "5.0.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
thiserror = "1.0.50"
